@@ -1,5 +1,9 @@
 2013-01-10 Molnar Karoly <molnarkaroly AT users.sf.net>
 
+	* support/scripts/mcs51-disasm.pl: Simplified the code.
+
+2013-01-10 Molnar Karoly <molnarkaroly AT users.sf.net>
+
 	* doc/sdccman.lyx: Expanded the 6.2 (Tools) table.
 
 2013-01-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
